<resources>
    <string name="app_name">Inventory</string>
    <string name="insert_sample_data">Insert Sample Data</string>
    <string name="product_inventory">Product Inventory</string>
    <string name="sample_product_name">Krill Oil Capsules</string>
    <string name="sample_supplier_name">BioOptimal</string>
    <string name="sample_supplier_number">(123) 456-7890</string>
    <string name="price_label">Price: </string>
    <string name="quantity_label">Quantity: </string>
    <string name="supplier_name_label">Supplier: </string>
    <string name="supplier_number_label">Phone: </string>
    <string name="sale_button_text">Sell</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_items">Clear Inventory</string>
    <string name="editor_hint_product_name">Product Name</string>
    <string name="editor_hint_product_price">Price</string>
    <string name="editor_hint_product_quantity">Quantity Available</string>
    <string name="editor_hint_supplier_name">Supplier Name</string>
    <string name="editor_hint_supplier_number">Supplier Phone Number</string>
    <string name="editor_save_product">Save Product</string>
    <string name="no_product_name">Product name is required</string>
    <string name="no_product_price">Valid product price is required</string>
    <string name="no_product_quantity">Valid product quantity is required</string>
    <string name="no_supplier_name">Supplier name is required</string>
    <string name="no_supplier_number">Supplier phone number is required</string>
    <string name="saving_product_error">Error with saving product</string>
    <string name="saving_product_success">Successfully saved product</string>
    <string name="activity_title_add_new_product">Add New Product</string>
    <string name="activity_title_edit_product">Edit Product</string>
    <string name="updating_product_error">Error with editing product</string>
    <string name="updating_product_success">Successfully updated product</string>
    <string name="clear_inventory_error">Error with clearing inventory</string>
    <string name="clear_inventory_success">Inventory clearing successful</string>
    <string name="out_of_stock_error">Product out of stock</string>
    <string name="sold_successfully">Product sold successfully</string>
    <string name="sold_unsuccessfully">Error with selling product</string>
    <string name="no_inventory">No items in inventory. \nGet started by adding a product\nusing
        the icon below.</string>
    <string name="view_product_activity_label">Product Details</string>
    <string name="increase_quantity">+ 1</string>
    <string name="decrease_quantity">- 1</string>
    <string name="contact_supplier">Call</string>
    <string name="edit_product_label">Edit This Product</string>
    <string name="delete_product_label">Delete This Product</string>
    <string name="increase_quantity_error">Error with increasing quantity</string>
    <string name="decrease_quantity_error">Error with decreasing quantity</string>
    <string name="delete_product_error">Error with deleting product</string>
    <string name="delete_product_success">Successfully deleted product</string>
    <string name="dialog_delete_product_message">Are you sure you want to delete this product?</string>
    <string name="dialog_cancel_delete_product">Cancel</string>
</resources>
