<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity"
    android:layout_margin="@dimen/layout_margin">
    
    <EditText
        android:textAlignment="center"
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editor_hint_product_name"
        android:inputType="text"
        android:layout_marginBottom="@dimen/layout_margin"/>

    <EditText
        android:textAlignment="center"
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:hint="@string/editor_hint_product_price"
        android:inputType="number"
        android:layout_marginBottom="@dimen/layout_margin"/>

    <EditText
        android:textAlignment="center"
        android:id="@+id/product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_price"
        android:hint="@string/editor_hint_product_quantity"
        android:inputType="number"
        android:layout_marginBottom="@dimen/layout_margin"/>

    <EditText
        android:id="@+id/supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_quantity"
        android:hint="@string/editor_hint_supplier_name"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/layout_margin"/>

    <EditText
        android:id="@+id/supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/supplier_name"
        android:hint="@string/editor_hint_supplier_number"
        android:inputType="phone"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/layout_margin"/>

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/save_product"
        android:layout_below="@id/supplier_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editor_save_product"
        android:onClick="saveProduct"/>

</RelativeLayout>