<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:contentPadding="@dimen/list_item_spacing">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_item_spacing"
                android:fontFamily="serif"
                android:textSize="@dimen/product_name"
                android:textStyle="bold"
                tools:text="@string/sample_product_name" />

            <TextView
                android:id="@+id/price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_name"
                android:layout_marginBottom="@dimen/list_item_spacing"
                android:layout_marginEnd="@dimen/list_item_spacing"
                android:layout_marginRight="@dimen/list_item_spacing"
                android:fontFamily="serif"
                android:text="@string/price_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_name"
                android:layout_marginBottom="@dimen/list_item_spacing"
                android:layout_toEndOf="@id/price_label"
                android:layout_toRightOf="@id/price_label"
                tools:text="12" />

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_price"
                android:layout_marginBottom="@dimen/list_item_spacing"
                android:layout_marginEnd="@dimen/list_item_spacing"
                android:layout_marginRight="@dimen/list_item_spacing"
                android:fontFamily="serif"
                android:text="@string/quantity_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_price"
                android:layout_marginBottom="@dimen/list_item_spacing"
                android:layout_toEndOf="@id/quantity_label"
                android:layout_toRightOf="@id/quantity_label"
                tools:text="25" />

            <Button
                android:id="@+id/sell_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/product_name"
                android:focusable="false"
                android:text="@string/sale_button_text" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
